Initial security support for the Squiggle browser.
By default:

. Scripts run in a sandbox.
. Scripts can only connect back to the server from
  which the document they belong to was loaded.
. Scripts can only come from the same server as the
  document they are linked from.

These behaviors are optional (in the Preference Dialog,
Browser options):

. Users can disable/enable script security altogether.
. Users can disable/enable script types (java or ecmascript)
. Users can disable/enable limiting scripts to the same
  origin as the document that references them.

Note that when the configuration is such that the 
user allows script coming from a different origin than
that of the document referencing it, the script can 
only connect back to the server which served the 
script and not to the server which served the 
document.

Limitations:

- in this initial commit, ECMA scripts cannot connect back
  to the server which served them. This should be added 
  shortly.


git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/batik/trunk@200822 13f79535-47bb-0310-9956-ffa450edef68